[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Player/Player_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemies/enemyFlyBullet.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Utils/HurtBox.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "shootUp"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "step"
} ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1, 3 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1, 3 )

[sub_resource type="Animation" id=10]
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_invinsible"
}, {
"args": [ false ],
"method": "set_invinsible"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 3, 4 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 2
script = ExtResource( 2 )
currentPlayerTexture = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )
hframes = 17
frame = 3

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/death = SubResource( 1 )
anims/fall = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/shoot = SubResource( 5 )
anims/shootUp = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 8 )

[node name="bulletInitPos" type="Position2D" parent="."]
visible = false
position = Vector2( 5, -3 )

[node name="Sprite" type="Sprite" parent="bulletInitPos"]
visible = false
texture = ExtResource( 3 )
hframes = 5

[node name="bulletUpPos" type="Position2D" parent="."]
visible = false
position = Vector2( 0, -9 )

[node name="Sprite" type="Sprite" parent="bulletUpPos"]
visible = false
texture = ExtResource( 3 )
hframes = 5

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 9 )

[node name="blinkAnimator" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 10 )

[node name="shootWaitTime" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="superGunDurationCounter" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="PickupDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetector"]
position = Vector2( 0, -4 )
shape = SubResource( 11 )

[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="timeout" from="superGunDurationCounter" to="." method="_on_superGunDurationCounter_timeout"]
[connection signal="area_entered" from="PickupDetector" to="." method="_on_PickupDetector_area_entered"]

[editable path="HurtBox"]
